[package]
name = "ourairports"
version = "0.2.0"
authors = ["Akbar Fadiansyah <akbarfadi01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.5"
serde_json = "1.0.59"
serde = { version = "1.0.119", features = ["derive"] }
human-panic = "1.0.3"
anyhow = "1.0.38"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
